# eGLE

./: CMakeLists.txt  README.md  library.h
data/Shaders/: colorShader.frag  colorShader.vert  lightFragment.frag  lightShader.frag  lightShader.vert  posVertex.vert
example/Lab1/: CMakeLists.txt
example/Lab1/src/: main.cpp  main2.cpp
example/Lab2/: CMakeLists.txt
example/Lab2/src/: main.cpp
example/eGame/: CMakeLists.txt
example/eGame/data/Models/car/: Hummer.mtl
example/eGame/data/Shaders/: colorShader.frag  colorShader.vert  lightFragment.frag  lightShader.frag  lightShader.vert
example/eGame/include/: CarObj.h
example/eGame/src/: CarObj.cpp  main.cpp
include/: Bites.h  Core.h  IO.h  Managers.h
include/Bites/: ApplicationContext.h  InputListener.h  KeyboardEvent.h  Keycode.h  Keymod.h  Keys.h  Keysym.h  Node.h  Transform.h
include/Components/: CameraComponent.h  Component.h  PointLightComponent.h  RenderComponent.h
include/Core/: ApplicationContext.h  Core.h  Debug.h  InputSystem.h  RenderSystem.h  Root.h  Window.h
include/Managers/: RenderSystem.h  SceneManager.h
include/Object/: Node.h  Vertex.h
include/Objects/: Material.h  Mesh.h  Mesh2D.h  Mesh3D.h  Model.h  Texture.h  Vertex.h
include/Objects/MeshObjects/: Cube.h  Dot2D.h  NonConvexPolygon2D.h  Polygon2D.h  Triangle2D.h
include/Shaders/: BasicShader.h  ColorShader.h  LightShader.h  Shader.h  ShaderTools.h
src/Bites/: ApplicationContext.cpp  InputListener.cpp  Node.cpp  Transform.cpp
src/Components/: CameraComponent.cpp  Component.cpp  PointLightComponent.cpp  RenderComponent.cpp
src/Core/: ApplicationContext.cpp  Core.cpp  InputSystem.cpp  RenderSystem.cpp  Root.cpp  Window.cpp
src/Managers/: InputSystem.cpp  RenderSystem.cpp
src/Object/: Node.cpp
src/Objects/: Material.cpp  Mesh.cpp  Mesh2D.cpp  Mesh3D.cpp  Model.cpp  Texture.cpp
src/Objects/MeshObjects/: Cube.cpp  Dot2D.cpp  NonConvexPolygon2D.cpp  Polygon2D.cpp  Triangle2D.cpp
src/Shaders/: BasicShader.cpp  ColorShader.cpp  LightShader.cpp  Shader.cpp  ShaderTools.cpp
